Fix appearance of selects with horizontal scrolling

--- a/relive-simulator-client/src/main/resources/style.css
+++ b/relive-simulator-client/src/main/resources/style.css
@@ -149,8 +149,12 @@ form .form-label {
     }
 }
 
-.dropdown-menu {
+div.dropdown-menu {
     max-width: 100vw;
+}
+
+.dropdown-menu > .inner > ul {
+    width: max-content;
 }
 
 .bootstrap-select > select {
